Add config code from original mod

--- a/common/src/main/resources/assets/clock_hud/lang/en_us.json
+++ b/common/src/main/resources/assets/clock_hud/lang/en_us.json
@@ -1,3 +1,10 @@
 {
-  "item.clock_hud.example_item": "Example Item"
+  "text.autoconfig.clock-hud.title": "Clock HUD",
+  "text.autoconfig.clock-hud.option.clockEnabled": "Clock Enabled?",
+  "text.autoconfig.clock-hud.option.iconEnabled": "Icon Enabled?",
+  "text.autoconfig.clock-hud.option.iconPosition": "Icon Position",
+  "text.autoconfig.clock-hud.option.position": "Position",
+  "text.autoconfig.clock-hud.option.colour": "Colour",
+  "text.autoconfig.clock-hud.option.xOffset": "X Offset",
+  "text.autoconfig.clock-hud.option.yOffset": "Y Offset"
 }
